# DVC-Pipeline-AWS

./: .gitignore  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
dvclive/: params.yaml
experiments/: mynotebook.ipynb
src/: data_ingestion.py  feature_eng.py  model_evaluation.py  model_training.py
